--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 	<div id="info01">
 	  <center>
-	  <a href ="https://chosashi-data.org/amx/sticky_note_map/map/" target="_self"><b><big>Sticky Note Map</big></b></a><br>
+	  <a href ="https://office-shirado.github.io/sticky_note_map/" target="_self"><b><big>Sticky Note Map</big></b></a><br>
 	  <small>【Ver0.03】&copy;AMX_Project 2024</small><br>
 	  <small><div  id="Count">　</div></small>
 	  <button id="myBtn"><b>What is this Map</b></button>
