--- a/index.html
+++ b/index.html
@@ -1,75 +1,50 @@
-﻿<!DOCTYPE html>
-<html lang="ja">
-  <head>
-    <meta charset="utf-8" />
-    <title>Sticky Note Map</title>
-    <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0" />
-    <meta name="description" content="「Sticky Note Map」is Simple Post on WebMap!" />
-
-
-    <!-- MapLibre GL JS -->
-    <script src='https://unpkg.com/maplibre-gl@3.3.1/dist/maplibre-gl.js'></script>
-    <link href='https://unpkg.com/maplibre-gl@3.3.1/dist/maplibre-gl.css' rel='stylesheet' />
-
-    <!-- GeoCoder -->
-    <script src="https://unpkg.com/@maplibre/maplibre-gl-geocoder@1.5.0/dist/maplibre-gl-geocoder.min.js"></script>
-    <link rel="stylesheet" href="https://unpkg.com/@maplibre/maplibre-gl-geocoder@1.5.0/dist/maplibre-gl-geocoder.css"  type="text/css" />
-
-    <!-- PMTiles -->
-    <script src="https://unpkg.com/pmtiles@2.10.0/dist/index.js"></script>
-
-    <!-- MyMaps -->
-    <script src="js/addSources_003.js"></script>
-    <script src="js/addLayers_003.js"></script>
-
-    <!-- スタイルシート -->
-    <link href="css/style_002.css" rel="stylesheet" />
-
-
-
-  </head>
-  <body>
-
-	<div id="map"></div>
-
-	<div id="info01">
-	  <center>
-	  <a href ="https://office-shirado.github.io/sticky_note_map/" target="_self"><b><big>Sticky Note Map</big></b></a><br>
-	  <small>【Ver0.03】&copy;AMX_Project 2024</small><br>
-	  <small><div  id="Count">　</div></small>
-	  <button id="myBtn"><b>What is this Map</b></button>
-	  </center>
-	</div>
-
-	<script src="js/main_003.js"></script>
-
-	<div id="info02">
-	<details id="newContents">
-	<summary><big>Latest Post (10)</big></summary>
-	<table id="infoTable" border="1.0" cellpadding="2">
-	<tr><th>Post List</th></tr>
-	</table>
-	</details>
-	</div>
-
-	<div id="myModal" class="modal">
-		<div class="modal-content">
-			<span class="close">&times;</span>
-			<p><big><b>Sticky Note Map</b></big></p>
-			<p>
-				<span class="blue"><b>「Sticky Note Map」</b></span>is......<br>
-				<hr>
-				<span><b>........................................</b></span>
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="utf-8" />
+<title>Sticky Note Map</title>
+<meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0" />
+<script src='https://unpkg.com/maplibre-gl@3.3.1/dist/maplibre-gl.js'></script>
+<link href='https://unpkg.com/maplibre-gl@3.3.1/dist/maplibre-gl.css' rel='stylesheet' />
+<script src="https://unpkg.com/@maplibre/maplibre-gl-geocoder@1.5.0/dist/maplibre-gl-geocoder.min.js"></script>
+<link rel="stylesheet" href="https://unpkg.com/@maplibre/maplibre-gl-geocoder@1.5.0/dist/maplibre-gl-geocoder.css"  type="text/css" />
+<script src="https://unpkg.com/pmtiles@2.10.0/dist/index.js"></script>
+<script src="addSources_003.js"></script>
+<script src="addLayers_003.js"></script>
+<link href="style.css" rel="stylesheet" />
+</head>
+<body>
+<div id="map"></div>
+<div id="info01">
+  <h3>Sticky Note Map</h3>
+  <p>Ver. 0.03n &copy; 2024 by AMX Project</p>
+  <p><div id="Count"></div></p>
+  <button id="myBtn"><b>What is this map?</b></button>
+</div>
+<script src="main.js"></script>
+<div id="info02">
+  <details id="newContents">
+  <summary>Latest Post (10)</summary>
+  <table id="infoTable" border="1.0" cellpadding="2">
+    <tr><th>Post List</th></tr>
+  </table>
+  </details>
+</div>
+<div id="myModal" class="modal">
+  <div class="modal-content">
+    <span class="close">&times;</span>
+    <h3>Sticky Note Map</h3>
+    <p>
+      <span class="blue"><b>Sticky Note Map</b></span> is a map where you can easily put your information on a smart map.<br>
+	  <hr>
+				<span><b>Originally developed by Office-Shirado</b></span>
 				<br>
-				<span class="blue"><b>........................................</b></span><br>
-				<span class="red"><b>........................................</b></span><br>
-				<span><b>........................................</b></span>
-			</p>
-		</div>
-	</div>
-
-	<script src="./js/modal_003.js"></script>
-
-
-  </body>
+				<span class="blue"><b>Maintained by AMX Project.</b></span><br>
+				<span class="red"><b>A main maintainer is hfu.</b></span><br>
+				<span><b>Contribution of hfu is a part of UN Smart Maps Group activities.</b></span>
+	</p>
+  </div>
+</div>
+<script src="modal.js"></script>
+</body>
 </html>
