--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
 <script src="https://unpkg.com/@maplibre/maplibre-gl-geocoder@1.5.0/dist/maplibre-gl-geocoder.min.js"></script>
 <link rel="stylesheet" href="https://unpkg.com/@maplibre/maplibre-gl-geocoder@1.5.0/dist/maplibre-gl-geocoder.css"  type="text/css" />
 <script src="https://unpkg.com/pmtiles@2.10.0/dist/index.js"></script>
-<script src="addSources_003.js"></script>
-<script src="addLayers_003.js"></script>
-<link href="style.css" rel="stylesheet" />
+<script src="./js/addSources_003.js"></script>
+<script src="./js/addLayers_003.js"></script>
+<link href="./css/style.css" rel="stylesheet" />
 </head>
 <body>
+
 <div id="map"></div>
 <div id="info01">
   <h3>Sticky Note Map</h3>
@@ -21,7 +22,7 @@
   <p><div id="Count"></div></p>
   <button id="myBtn"><b>What is this map?</b></button>
 </div>
-<script src="main.js"></script>
+<script src="./js/main.js"></script>
 <div id="info02">
   <details id="newContents">
   <summary>Latest Post (10)</summary>
@@ -33,7 +34,7 @@
 <div id="myModal" class="modal">
   <div class="modal-content">
     <span class="close">&times;</span>
-    <h3>Sticky Note Map</h3>
+    <h1>Sticky Note Map</h1>
     <p>
       <span class="blue"><b>Sticky Note Map</b></span> is a map where you can easily put your information on a smart map.<br>
 	  <hr>
@@ -45,6 +46,6 @@
 	</p>
   </div>
 </div>
-<script src="modal.js"></script>
+<script src="./js/modal.js"></script>
 </body>
 </html>
