--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <div id="map"></div>
 <div id="info01">
-  <h3>Sticky Note Map</h3>
+  <h1><a href="https://office-shirado.github.io/sticky_note_map/" target="_self">Sticky Note Map</a></h1>
   <p>Ver. 0.03n &copy; 2024 by AMX Project</p>
   <p><div id="Count"></div></p>
   <button id="myBtn"><b>What is this map?</b></button>
