--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <script src="https://unpkg.com/pmtiles@2.10.0/dist/index.js"></script>
 <script src="./js/addSources_003.js"></script>
 <script src="./js/addLayers_003.js"></script>
-<link href="./css/style.css" rel="stylesheet" />
+<link href="./css/style_002.css" rel="stylesheet" />
 </head>
 <body>
 
