--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 <div id="info01">
 	<center>
 		<h2><a href="https://office-shirado.github.io/sticky_note_map/" target="_self">Sticky Note Map</a></h2>
-  		<p>Ver. 0.03n &copy; 2024 by AMX Project</p>
-  		<p><div id="Count"></div></p>
+  		<small>Ver. 0.03n &copy; 2024 by AMX Project</small><br>
+  		<small><div id="Count">　</div></small>
   		<button id="myBtn"><b>What is this map?</b></button>
 	</center>
 </div>
