--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8" />
-<title>Sticky Note Map</title>
+<title>Sticky Note Map【Office-Shirado】</title>
 <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0" />
 <script src='https://unpkg.com/maplibre-gl@3.3.1/dist/maplibre-gl.js'></script>
 <link href='https://unpkg.com/maplibre-gl@3.3.1/dist/maplibre-gl.css' rel='stylesheet' />
@@ -41,6 +41,7 @@
       <span class="blue"><b>Sticky Note Map</b></span> is a map where you can easily put your information on a smart map.<br>
 	  <hr>
 				<span><b>Originally developed by Office-Shirado</b></span>
+				<span><a href="https://chosashi-data.org/shirado/limit12/">Limit 12</a></span>
 				<br>
 				<span class="blue"><b>Maintained by AMX Project.</b></span><br>
 				<span class="red"><b>A main maintainer is hfu.</b></span><br>
