--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8" />
 <title>Sticky Note Map【Office-Shirado】</title>
 <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0" />
-<link rel="shortcut icon" type="image/x-icon" href="path/to/favicon.ico" />
+<link rel="shortcut icon" type="image/x-icon" href="./favicon.ico" />
 <script src='https://unpkg.com/maplibre-gl@3.3.1/dist/maplibre-gl.js'></script>
 <link href='https://unpkg.com/maplibre-gl@3.3.1/dist/maplibre-gl.css' rel='stylesheet' />
 <script src="https://unpkg.com/@maplibre/maplibre-gl-geocoder@1.5.0/dist/maplibre-gl-geocoder.min.js"></script>
