--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <div id="info01">
 	<center>
 		<a href="https://office-shirado.github.io/sticky_note_map/" target="_self"><b><big>Sticky Note Map</big></b></a><br>
-  		<small>Ver. 0.03n &copy; 2024 by AMX Project</small><br>
+  		<small>Ver. 0.03 &copy; 2024 by AMX Project</small><br>
   		<small><div id="Count">　</div></small>
   		<button id="myBtn"><b>What is this map?</b></button>
 	</center>
