--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <p>
       <span class="blue"><b>Sticky Note Map</b></span> is a map where you can easily put your information on a smart map.<br>
 	  <hr>
-				<span><b>Originally developed by Office-Shirado</b> ---&gt;<a href="https://chosashi-data.org/shirado/limit12/"> Limit 12</a></span>
+				<span><b>Originally developed by Office-Shirado</b> ---&gt;<a href="https://chosashi-data.org/shirado/limit12/"> <b>Limit 12</b></a></span>
 				<br>
 				<span class="blue"><b>Maintained by AMX Project.</b></span><br>
 				<span class="red"><b>A main maintainer is hfu.</b></span><br>
