--- a/index.html
+++ b/index.html
@@ -7,9 +7,16 @@
 <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico" />
 <script src='https://unpkg.com/maplibre-gl@3.3.1/dist/maplibre-gl.js'></script>
 <link href='https://unpkg.com/maplibre-gl@3.3.1/dist/maplibre-gl.css' rel='stylesheet' />
+
 <script src="https://unpkg.com/@maplibre/maplibre-gl-geocoder@1.5.0/dist/maplibre-gl-geocoder.min.js"></script>
 <link rel="stylesheet" href="https://unpkg.com/@maplibre/maplibre-gl-geocoder@1.5.0/dist/maplibre-gl-geocoder.css"  type="text/css" />
+
 <script src="https://unpkg.com/pmtiles@2.10.0/dist/index.js"></script>
+
+<script src="https://office-shirado.github.io/sticky_note_map/src/0.01/Sticky_Note_Map.js"></script>
+<link rel="stylesheet" href="https://office-shirado.github.io/sticky_note_map/src/0.01/Sticky_Note_Map.css"  type="text/css" />
+
+
 <script src="./js/addSources_003.js"></script>
 <script src="./js/addLayers_003.js"></script>
 <link href="./css/style_002.css" rel="stylesheet" />
