--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 
 <script src="./js/addSources_003.js"></script>
 <script src="./js/addLayers_003.js"></script>
+<link href="css/style_002.css" rel="stylesheet" />
+
 </head>
 <body>
 
