--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <script src="./js/addSources_003.js"></script>
 <script src="./js/addLayers_003.js"></script>
-<link href="css/style_002.css" rel="stylesheet" />
+<link href="./css/style_002.css" rel="stylesheet" />
 
 </head>
 <body>
