--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
 <script src="https://unpkg.com/pmtiles@2.10.0/dist/index.js"></script>
 
-<script src="https://office-shirado.github.io/sticky_note_map/src/0.01/Sticky_Note_Map.js"></script>
-<link rel="stylesheet" href="https://office-shirado.github.io/sticky_note_map/src/0.01/Sticky_Note_Map.css"  type="text/css" />
+<script src="https://office-shirado.github.io/sticky_note_map/src/0.02/Sticky_Note_Map.js"></script>
+<link rel="stylesheet" href="https://office-shirado.github.io/sticky_note_map/src/0.02/Sticky_Note_Map.css"  type="text/css" />
 
 
 <script src="./js/addSources_003.js"></script>
@@ -29,7 +29,7 @@
 	<center>
 		<a href="https://office-shirado.github.io/sticky_note_map/" target="_self"><b><big>Sticky Note Map</big></b></a><br>
   		<small>Ver. 0.03 &copy; 2024 by AMX Project</small><br>
-  		<small><div id="Count">　</div></small>
+  		<small><div id="PV_Count">　</div></small>
   		<button id="myBtn"><b>What is this map?</b></button>
 	</center>
 </div>
