--- a/sample/custom/index.html
+++ b/sample/custom/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8" />
-	<title>Sticky Note Map(Basic Sample)</title>
+	<title>Sticky Note Map(Custom)</title>
 	<meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0" />
 
 	<!-- MapLibre GL JS -->
